Update the code to use Java 17+ syntax where applicable.
Signed-off-by: James R. Perkins <jperkins@ibm.com>