@@ -35,7 +35,7 @@ abstract class AbstractEarDeploymentTest {
         final URI uri = uri();
         Assertions.assertNotNull(uri);
         Assertions.assertTrue(uri.toString().endsWith("/test"),
-                () -> String.format("Expected URI to contain the request path /test at the end: %s", uri));
+                () -> "Expected URI to contain the request path /test at the end: %s".formatted(uri));
     }
 
     @Test
@@ -46,7 +46,7 @@ abstract class AbstractEarDeploymentTest {
                 .build();
         final HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
         Assertions.assertEquals(200, response.statusCode(),
-                () -> String.format("Expected HTTP status code %d: %s", response.statusCode(), response.body()));
+                () -> "Expected HTTP status code %d: %s".formatted(response.statusCode(), response.body()));
         Assertions.assertTrue(response.body().startsWith("Test"));
     }
 
