@@ -32,7 +32,7 @@ abstract class AbstractWarDeploymentTest {
     public void validateUri() {
         Assertions.assertNotNull(uri);
         Assertions.assertTrue(uri.toString().endsWith("/test"),
-                () -> String.format("Expected URI to contain the request path /test at the end: %s", uri));
+                () -> "Expected URI to contain the request path /test at the end: %s".formatted(uri));
     }
 
     @Test
@@ -43,8 +43,8 @@ abstract class AbstractWarDeploymentTest {
                 .build();
         final HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
         Assertions.assertEquals(200, response.statusCode(),
-                () -> String.format("Expected HTTP status code %d: %s", response.statusCode(), response.body()));
+                () -> "Expected HTTP status code %d: %s".formatted(response.statusCode(), response.body()));
         Assertions.assertTrue(response.body().startsWith("Test"),
-                () -> String.format("Expected response to start with 'Test', but was: %s", response.body()));
+                () -> "Expected response to start with 'Test', but was: %s".formatted(response.body()));
     }
 }
