@@ -48,7 +48,7 @@ abstract class AbstractAutoStartTest implements ManualModeTest {
         final var uri = getUri();
         Assertions.assertNotNull(uri);
         Assertions.assertTrue(uri.toString().endsWith("/test"),
-                () -> String.format("Expected URI to contain the request path /test at the end: %s", uri));
+                () -> "Expected URI to contain the request path /test at the end: %s".formatted(uri));
     }
 
     @Test
@@ -59,7 +59,7 @@ abstract class AbstractAutoStartTest implements ManualModeTest {
                 .build();
         final HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
         Assertions.assertEquals(200, response.statusCode(),
-                () -> String.format("Expected HTTP status code %d for %s: %s", response.statusCode(), getUri(),
+                () -> "Expected HTTP status code %d for %s: %s".formatted(response.statusCode(), getUri(),
                         response.body()));
         Assertions.assertTrue(response.body().startsWith("Test"));
     }
